	PR tree-optimization/58364 	* tree-ssa-reassoc.c (init_range_entry): For BIT_NOT_EXPR on 	BOOLEAN_TYPE, only invert in_p and continue with arg0 if 	the current range can't be an unconditional true or false.

* gcc.c-torture/execute/pr58364.c: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@202409 138bc75d-0d04-0410-961f-82ee72b054a4